--- a/WPF/Mob/Effects_type/Glow.xaml
+++ b/WPF/Mob/Effects_type/Glow.xaml
@@ -1,18 +1,18 @@
-﻿<Window x:Class="MythicMobs_edit.WPF.Mob.Effects_type.SmokeSwirl"
+﻿<Window x:Class="MythicMobs_edit.WPF.Mob.Effects_type.Glow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MythicMobs_edit.WPF.Mob.Effects_type"
-        xmlns:Other="clr-namespace:MythicMobs_edit.WPF.Mob.Other" 
+xmlns:Other="clr-namespace:MythicMobs_edit.WPF.Mob.Other" 
         mc:Ignorable="d"
-        Title="修改粒子效果：Smoke Swirl" Height="436" Width="305"  Background="Black" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
+        Title="修改粒子效果：Glow" Height="426" Width="298" Background="Black" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
     <Grid>
-        <Label Content="持续时间" HorizontalAlignment="Left" Margin="5,0,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
-        <TextBox HorizontalAlignment="Left" Height="20" Margin="68,3,0,0" Text="{Binding Effects.Option.duration}" VerticalAlignment="Top" Width="120"
-                 PreviewTextInput="TextCompositionEventArgs" Style="{StaticResource TextBox}"/>
-        <Label Content="间隔" HorizontalAlignment="Left" Margin="18,30,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
-        <TextBox HorizontalAlignment="Left" Height="20" Margin="68,33,0,0" Text="{Binding Effects.Option.interval}" VerticalAlignment="Top" Width="120"
+        <Label Content="颜色" HorizontalAlignment="Left" Margin="5,0,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
+        <TextBox HorizontalAlignment="Left" Height="20" Margin="44,3,0,0" Text="{Binding Effects.Option.color}" VerticalAlignment="Top" Width="120"
+                 Style="{StaticResource TextBox}"/>
+        <Label Content="间隔" HorizontalAlignment="Left" Margin="5,30,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
+        <TextBox HorizontalAlignment="Left" Height="20" Margin="44,32,0,0" Text="{Binding Effects.Option.duration}" VerticalAlignment="Top" Width="120"
                  PreviewTextInput="TextCompositionEventArgs" Style="{StaticResource TextBox}"/>
         <Button Content="OK" HorizontalAlignment="Left" Margin="205,368,0,0" VerticalAlignment="Top" Width="75" Height="20" Style="{StaticResource Button}" Click="Button_Click" IsDefault="True"/>
 
