--- a/WPF/Mob/Mechanic_type/Command.xaml
+++ b/WPF/Mob/Mechanic_type/Command.xaml
@@ -6,10 +6,10 @@
         xmlns:local="clr-namespace:MythicMobs_edit.WPF.Mob.Mechanic_type"
         xmlns:Other="clr-namespace:MythicMobs_edit.WPF.Mob.Other" 
         mc:Ignorable="d"
-        Title="机制修改：Arrow Volley" Height="438" Width="303" Background="Black" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
+        Title="机制修改：Command" Height="438" Width="305"  Background="Black" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
     <Grid>
         <Label Content="命令" HorizontalAlignment="Left" Margin="5,0,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
-        <TextBox HorizontalAlignment="Left" Height="20" Margin="44,3,0,0" Text="{Binding Mechanic.Option.amount}" VerticalAlignment="Top" Width="243"
+        <TextBox HorizontalAlignment="Left" Height="20" Margin="44,3,0,0" Text="{Binding Mechanic.Option.command}" VerticalAlignment="Top" Width="241"
                  Style="{StaticResource TextBox}"/>
         <Button Content="OK" HorizontalAlignment="Left" Margin="205,378,0,0" VerticalAlignment="Top" Width="75" Height="20" Style="{StaticResource Button}" Click="Button_Click" IsDefault="True"/>
 
