--- a/WPF/Mob/Addmob.xaml
+++ b/WPF/Mob/Addmob.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="MythicMobs_edit.WPF.Addmob"
+﻿<Window x:Class="MythicMobs_edit.WPF.Mob.Addmob"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -36,20 +36,20 @@
                 Click="Button_Click" Grid.Column="2"/>
         <StackPanel HorizontalAlignment="Left" VerticalAlignment="Top" Width="318" Height="717">
             <Expander Header="基础设置" Foreground="#FFFFFFFF"  HorizontalAlignment="Left" VerticalAlignment="Top" Width="318" IsExpanded="True">
-                <Grid Height="335">
+                <Grid>
                     <Label Content="生物名字" HorizontalAlignment="Left" Height="25" Margin="5,0,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Center" Style="{StaticResource Label}"/>
                     <Label Content="生物类型" HorizontalAlignment="Left" Height="25" Margin="5,25,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Center" Style="{StaticResource Label}"/>
                     <Label Content="显示名称" HorizontalAlignment="Left" Height="25" Margin="5,50,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Center" Style="{StaticResource Label}"/>
                     <Label Content="血量" HorizontalAlignment="Left" Height="25" Margin="17,75,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Center" Style="{StaticResource Label}"/>
                     <Label Content="伤害" HorizontalAlignment="Left" Height="25" Margin="17,100,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Center" Style="{StaticResource Label}"/>
                     <Label Content="护甲" HorizontalAlignment="Left" Height="25" Margin="17,125,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Center" Style="{StaticResource Label}"/>
-                    <Label Content="派系名称" HorizontalAlignment="Left" Height="25" Margin="5,155,0,-11" VerticalAlignment="Top" HorizontalContentAlignment="Center" Style="{StaticResource Label}"/>
-                    <Label Content="坐骑" HorizontalAlignment="Left" Height="25" Margin="17,180,0,-36" VerticalAlignment="Top" HorizontalContentAlignment="Center" Style="{StaticResource Label}"/>
-                    <Label Content="攻击速度" HorizontalAlignment="Left" Height="25" Margin="5,205,0,-61" VerticalAlignment="Top" HorizontalContentAlignment="Center" Style="{StaticResource Label}"/>
-                    <Label Content="跟随距离" HorizontalAlignment="Left" Height="25" Margin="5,230,0,-86" VerticalAlignment="Top" HorizontalContentAlignment="Center" Style="{StaticResource Label}"/>
-                    <Label Content="抗击退" HorizontalAlignment="Left" Height="25" Margin="5,253,0,-109" VerticalAlignment="Top" HorizontalContentAlignment="Center" Style="{StaticResource Label}"/>
-                    <Label Content="受伤害半径" HorizontalAlignment="Left" Height="25" Margin="0,278,0,-134" VerticalAlignment="Top" HorizontalContentAlignment="Center" Style="{StaticResource Label}"/>
-                    <Label Content="移动速度" HorizontalAlignment="Left" Height="25" Margin="5,303,0,-159" VerticalAlignment="Top" HorizontalContentAlignment="Center" Style="{StaticResource Label}"/>
+                    <Label Content="派系名称" HorizontalAlignment="Left" Height="25" Margin="5,150,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Center" Style="{StaticResource Label}"/>
+                    <Label Content="坐骑" HorizontalAlignment="Left" Height="25" Margin="17,175,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Center" Style="{StaticResource Label}"/>
+                    <Label Content="攻击速度" HorizontalAlignment="Left" Height="25" Margin="5,200,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Center" Style="{StaticResource Label}"/>
+                    <Label Content="跟随距离" HorizontalAlignment="Left" Height="25" Margin="5,225,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Center" Style="{StaticResource Label}"/>
+                    <Label Content="抗击退" HorizontalAlignment="Left" Height="25" Margin="10,250,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Center" Style="{StaticResource Label}"/>
+                    <Label Content="受伤害半径" HorizontalAlignment="Left" Height="25" Margin="0,275,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Center" Style="{StaticResource Label}"/>
+                    <Label Content="移动速度" HorizontalAlignment="Left" Height="25" Margin="5,300,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Center" Style="{StaticResource Label}"/>
 
                     <ComboBox HorizontalAlignment="Left" Margin="70,29,0,0" VerticalAlignment="Top" Style="{StaticResource ComboBoxStyle}"
                               Width="243" Height="20" x:Name="Mob_Type" SelectionChanged="Mob_Type_SelectionChanged" Text="{Binding Mob.Type}" IsReadOnly="True"/>
@@ -64,24 +64,24 @@
                              VerticalAlignment="Top" Width="243" Text="{Binding Mob.Damage}" x:Name ="Mob_Damage" PreviewTextInput="TextCompositionEventArgs"/>
                     <TextBox HorizontalAlignment="Left" Height="20" Margin="70,129,0,0" Style="{StaticResource TextBox}"
                              VerticalAlignment="Top" Width="243" Text="{Binding Mob.Armor}" x:Name ="Mob_Armor" PreviewTextInput="TextCompositionEventArgs"/>
-                    <TextBox HorizontalAlignment="Left" Height="20" Margin="70,159,0,-10" Style="{StaticResource TextBox}"
+                    <TextBox HorizontalAlignment="Left" Height="20" Margin="70,154,0,0" Style="{StaticResource TextBox}"
                              VerticalAlignment="Top" Width="243" Text="{Binding Mob.Faction}" x:Name ="Mob_Faction"/>
-                    <TextBox HorizontalAlignment="Left" Height="20" Margin="70,184,0,-35" Style="{StaticResource TextBox}"
+                    <TextBox HorizontalAlignment="Left" Height="20" Margin="70,179,0,0" Style="{StaticResource TextBox}"
                              VerticalAlignment="Top" Width="243" Text="{Binding Mob.Mount}" x:Name ="Mob_Mount"/>
-                    <TextBox HorizontalAlignment="Left" Height="20" Margin="70,209,0,-60" Style="{StaticResource TextBox}"
+                    <TextBox HorizontalAlignment="Left" Height="20" Margin="70,204,0,0" Style="{StaticResource TextBox}"
                              VerticalAlignment="Top" Width="243" Text="{Binding Mob.Options.AttackSpeed}" x:Name ="Options_AttackSpeed" PreviewTextInput="TextCompositionEventArgs"/>
-                    <TextBox HorizontalAlignment="Left" Height="20" Margin="70,234,0,-85" Style="{StaticResource TextBox}"
+                    <TextBox HorizontalAlignment="Left" Height="20" Margin="70,229,0,0" Style="{StaticResource TextBox}"
                              VerticalAlignment="Top" Width="243" Text="{Binding Mob.Options.FollowRange}" x:Name ="Options_FollowRange" PreviewTextInput="TextCompositionEventArgs"/>
-                    <TextBox HorizontalAlignment="Left" Height="20" Margin="70,258,0,-109" Style="{StaticResource TextBox}"
+                    <TextBox HorizontalAlignment="Left" Height="20" Margin="70,254,0,0" Style="{StaticResource TextBox}"
                              VerticalAlignment="Top" Width="243" Text="{Binding Mob.Options.KnockbackResistance}" x:Name ="Options_KnockbackResistance" PreviewTextInput="TextCompositionEventArgs"/>
-                    <TextBox HorizontalAlignment="Left" Height="20" Margin="70,283,0,-134" Style="{StaticResource TextBox}"
+                    <TextBox HorizontalAlignment="Left" Height="20" Margin="70,279,0,0" Style="{StaticResource TextBox}"
                              VerticalAlignment="Top" Width="243" Text="{Binding Mob.Options.MaxCombatDistance}" x:Name ="Options_MaxCombatDistance" PreviewTextInput="TextCompositionEventArgs"/>
-                    <TextBox HorizontalAlignment="Left" Height="20" Margin="70,308,0,-159" Style="{StaticResource TextBox}"
+                    <TextBox HorizontalAlignment="Left" Height="20" Margin="70,304,0,0" Style="{StaticResource TextBox}"
                              VerticalAlignment="Top" Width="243" Text="{Binding Mob.Options.MovementSpeed}" x:Name ="Options_MovementSpeed" PreviewTextInput="TextCompositionEventArgs"/>
                 </Grid>
             </Expander>
             <Expander Header="BOSS血条" HorizontalAlignment="Left" VerticalAlignment="Top" Foreground="#FFFFFFFF" Width="318">
-                <Grid >
+                <Grid>
                     <Label Content="标题" HorizontalAlignment="Left" Height="25" Margin="6,19,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Center" Style="{StaticResource Label}"/>
                     <Label Content="显示范围" HorizontalAlignment="Left" Height="25" Margin="6,44,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Center" Style="{StaticResource Label}"/>
                     <Label Content="血条颜色" HorizontalAlignment="Left" Height="25" Margin="6,69,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Center" Style="{StaticResource Label}"/>
