--- a/WPF/Item/Attributes.xaml
+++ b/WPF/Item/Attributes.xaml
@@ -4,15 +4,8 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="MythicMobs_edit 添加物品_物品属性_" Height="170" Width="338" ResizeMode="NoResize" Foreground="Black" WindowStartupLocation="CenterScreen">
-    <Grid>
-        <Grid.Background>
-            <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                <GradientStop Color="Black" Offset="0.5"/>
-                <GradientStop Color="#FF252525" Offset="1"/>
-                <GradientStop Color="#FF252525"/>
-            </LinearGradientBrush>
-        </Grid.Background>
+        Title="MythicMobs_edit 添加物品_物品属性" Height="170" Width="338" ResizeMode="NoResize" Foreground="Black" WindowStartupLocation="CenterScreen">
+    <Grid Background="Black" Margin="0,0,0,0">
         <Label Content="攻速" HorizontalAlignment="Left" Height="24" Margin="17,2,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Center" Style="{StaticResource Label}"/>
         <Label Content="护甲" HorizontalAlignment="Left" Height="26" Margin="17,26,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Center" Style="{StaticResource Label}"/>
         <Label Content="护甲韧度" HorizontalAlignment="Left" Height="24" Margin="6,52,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Center" Style="{StaticResource Label}"/>
