--- a/WPF/Use/MessageEdit.xaml
+++ b/WPF/Use/MessageEdit.xaml
@@ -1,9 +1,8 @@
-﻿<Window x:Class="MythicMobs_edit.WPF.Mob.Other.KillMessages"
+﻿<Window x:Class="MythicMobs_edit.WPF.Use.MessageEdit"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:MythicMobs_edit.WPF.Mob.Other"
         mc:Ignorable="d"
         Title="文本编辑" Height="140" Width="350" Background="Black" ResizeMode="NoResize" Icon="/MythicMobs_edit;component/image/方的7.jpg" WindowStartupLocation="CenterScreen">
     <Grid>
