--- a/WPF/Use/Message_Box.xaml
+++ b/WPF/Use/Message_Box.xaml
@@ -1,15 +1,14 @@
-﻿<Window x:Class="MythicMobs_edit.WPF.Mob.Other.Message"
+﻿<Window x:Class="MythicMobs_edit.WPF.Use.Message_Box"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:MythicMobs_edit.WPF.Mob.Other"
         mc:Ignorable="d"
         Title="" Height="102" Width="214" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" Icon="/MythicMobs_edit;component/image/方的7.jpg">
     <Grid Background="Black">
         <Label Content="Label" HorizontalAlignment="Center" VerticalAlignment="Center"
                Name="show" Style="{StaticResource Label}"/>
         <Button Content="OK" HorizontalAlignment="Left" Margin="145,50,0,0" VerticalAlignment="Top" Width="53" 
-                Click="Button_Click" Style="{StaticResource Button}" Height="13"/>
+                Click="Button_Click" Style="{StaticResource Button}"/>
     </Grid>
 </Window>
