--- a/WPF/Mob/Other/DropsChange.xaml
+++ b/WPF/Mob/Other/DropsChange.xaml
@@ -4,21 +4,21 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="掉落物修改" Height="150" Width="228" ResizeMode="NoResize" Icon="/MythicMobs_edit;component/image/方的7.jpg" WindowStartupLocation="CenterScreen">
+        Title="掉落物修改" Height="150" Width="228" ResizeMode="NoResize" Icon="/MythicMobs_edit;component/image/方的7.jpg" WindowStartupLocation="CenterScreen" Closing="Window_Closing">
     <Grid Background="Black" Margin="0,0,0,0">
 
-        <Label Content="类型/名字" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
-        <Label Content="数量" HorizontalAlignment="Left" Margin="0,30,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
-        <Label Content="概率" HorizontalAlignment="Left" Margin="0,60,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
+        <Label Content="类型/名字" HorizontalAlignment="Left" Margin="5,0,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
+        <Label Content="数量" HorizontalAlignment="Left" Margin="5,30,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
+        <Label Content="概率" HorizontalAlignment="Left" Margin="5,60,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"/>
         <Label Content="{Binding Drops.chance}" HorizontalAlignment="Left" Margin="175,60,0,0" VerticalAlignment="Top" Style="{StaticResource Label}"
                Height="26" Width="35"/>
 
-        <TextBox HorizontalAlignment="Left" Margin="39,35,0,0" Height="20" Text="{Binding Drops.amount}" VerticalAlignment="Top"
-                 Style="{StaticResource TextBox}" Width="171" PreviewTextInput="TextCompositionEventArgs"/>
-        <TextBox HorizontalAlignment="Left" Margin="68,5,0,0" Text="{Binding Drops.Type}" VerticalAlignment="Top"
-                 Style="{StaticResource TextBox}" Width="142"/>
+        <TextBox HorizontalAlignment="Left" Margin="44,33,0,0" Height="20" Text="{Binding Drops.amount}" VerticalAlignment="Top"
+                 Style="{StaticResource TextBox}" Width="166" PreviewTextInput="TextCompositionEventArgs"/>
+        <TextBox HorizontalAlignment="Left" Margin="73,4,0,0" Text="{Binding Drops.Type}" VerticalAlignment="Top"
+                 Style="{StaticResource TextBox}" Width="137"/>
 
-        <Slider HorizontalAlignment="Left" Margin="39,62,0,0" VerticalAlignment="Top" Width="134" Style="{StaticResource Slider}" 
+        <Slider HorizontalAlignment="Left" Margin="44,62,0,0" VerticalAlignment="Top" Width="129" Style="{StaticResource Slider}" 
                 Maximum="1" TickFrequency="0.1" LargeChange="0.1" Value="{Binding Drops.chance}"/>
 
         <Button Content="OK" HorizontalAlignment="Left" Margin="135,91,0,0" VerticalAlignment="Top" Width="75" Style="{StaticResource Button}" IsDefault="True" Click="Button_Click" />
