--- a/WPF/Spawners/AddSpawners.xaml
+++ b/WPF/Spawners/AddSpawners.xaml
@@ -4,9 +4,20 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MythicMobs_edit.WPF.Spawners"
-        mc:Ignorable="d"
-        Title="AddSpawners" Height="450" Width="800">
-    <Grid>
-        
+        mc:Ignorable="d" Title="Blur Demo" Height="350" Width="525"
+        Background="Transparent" Loaded="Window_Loaded">
+    <WindowChrome.WindowChrome>
+        <WindowChrome GlassFrameThickness="-1" />
+    </WindowChrome.WindowChrome>
+    <Grid Background="#A0FFFFFF">
+        <TextBlock Foreground="White"
+                   FontSize="20" FontWeight="Light" TextAlignment="Center"
+                   HorizontalAlignment="Center" VerticalAlignment="Center">
+            <Run Text="Hello World" FontSize="48"/>
+            <LineBreak/>
+            <Run Text="白底效果" />
+            <LineBreak/>
+            <Run Text="walterlv.github.io"/>
+        </TextBlock>
     </Grid>
 </Window>
