--- a/WPF/Mob/Addmob.xaml
+++ b/WPF/Mob/Addmob.xaml
@@ -1,13 +1,14 @@
-﻿<Window x:Class="MythicMobs_edit.WPF.Mob.Addmob"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d"
-        Title="MythicMobs_edit 添加生物" Height="746" Width="1280" ResizeMode="CanMinimize"
-        Icon="/MythicMobs_edit;component/image/方的7.jpg" Loaded="Window_Loaded" Background="Transparent">
+﻿<controls:MetroWindow x:Class="MythicMobs_edit.WPF.Mob.Addmob"
+                      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                      xmlns:controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+                      mc:Ignorable="d"
+        Title="MythicMobs_edit 添加生物" Height="746" Width="1280"
+        Icon="/MythicMobs_edit;component/image/方的7.jpg" Loaded="Window_Loaded" Background="Transparent" ResizeMode="CanMinimize">
     <WindowChrome.WindowChrome>
-        <WindowChrome GlassFrameThickness="-1" />
+        <WindowChrome GlassFrameThickness="-1" CaptionHeight="0"/>
     </WindowChrome.WindowChrome>
     <Grid Background="#00FFFFFF">
         <Grid.ColumnDefinitions>
@@ -26,13 +27,13 @@
             </StackPanel.Effect>
         </StackPanel>
 
-        <TextBox Margin="0,30,0,0" Background="#AA898989" Name="Out" Style="{StaticResource TextBox}" Grid.Column="3" RenderTransformOrigin="0.0,0.0" TextWrapping="Wrap"/>
+        <TextBox Margin="0,0,0,0" Background="#AA898989" Name="Out" Style="{StaticResource TextBox}" Grid.Column="3" RenderTransformOrigin="0.0,0.0" TextWrapping="Wrap"/>
         <Button Content="返回" HorizontalAlignment="Left" Height="24" Margin="213,681,0,0" VerticalAlignment="Top" Width="95" Style="{StaticResource Button}"
                 Click="Return" Grid.Column="2"/>
         <Button Content="就决定是你了" HorizontalAlignment="Left" Height="24" Margin="113,681,0,0" VerticalAlignment="Top" Width="95" Style="{StaticResource Button}"
                 Click="Button_Click" Grid.Column="2"/>
-        <StackPanel Margin="0,30,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Width="318" Height="717" Background="#00FFFFFF">
-            <Expander Header="基础设置" Foreground="#FFFFFFFF"  HorizontalAlignment="Left" VerticalAlignment="Top" Width="318" IsExpanded="True">
+        <StackPanel Margin="0,0,0,0" Background="#00FFFFFF">
+            <Expander Header="基础设置" Foreground="#FFFFFFFF" VerticalAlignment="Top" IsExpanded="True" Background="#00FFFFFF">
                 <Grid>
                     <Label Content="生物名字" HorizontalAlignment="Left" Height="25" Margin="5,0,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Center" Style="{StaticResource Label}"/>
                     <Label Content="生物类型" HorizontalAlignment="Left" Height="25" Margin="5,25,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Center" Style="{StaticResource Label}"/>
@@ -77,7 +78,7 @@
                              VerticalAlignment="Top" Width="243" Text="{Binding Mob.Options.MovementSpeed}" x:Name ="Options_MovementSpeed" PreviewTextInput="TextCompositionEventArgs"/>
                 </Grid>
             </Expander>
-            <Expander Header="BOSS血条" HorizontalAlignment="Left" VerticalAlignment="Top" Foreground="#FFFFFFFF" Width="318">
+            <Expander Header="BOSS血条" VerticalAlignment="Top" Foreground="#FFFFFFFF" Margin="0,0,0,0" Background="#00FFFFFF">
                 <Grid>
                     <Label Content="标题" HorizontalAlignment="Left" Height="25" Margin="6,19,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Center" Style="{StaticResource Label}"/>
                     <Label Content="显示范围" HorizontalAlignment="Left" Height="25" Margin="6,44,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Center" Style="{StaticResource Label}"/>
@@ -105,7 +106,7 @@
                             x:Name="BossBar_Style_r" IsEnabled="False" Click="BossBar_Style_r_Click"/>
                 </Grid>
             </Expander>
-            <Expander Header="高级设置" HorizontalAlignment="Left" VerticalAlignment="Top" Foreground="#FFFFFFFF" Width="318">
+            <Expander Header="高级设置" VerticalAlignment="Top" Foreground="#FFFFFFFF"  Margin="0,0,0,0" Background="#00FFFFFF">
                 <Grid Height="215">
                     <CheckBox Content="总是显示名称" HorizontalAlignment="Left" Height="15" Margin="3,4,0,0" VerticalAlignment="Top" Style="{StaticResource Check}"
                               IsChecked="{Binding Mob.Options.AlwaysShowName}" x:Name="Options_AlwaysShowName"/>
@@ -147,7 +148,7 @@
                               IsChecked="{Binding Mob.Modules.ImmunityTable}" x:Name="Modules_ImmunityTable"/>
                 </Grid>
             </Expander>
-            <Expander Header="生物AI-目标" Foreground="#FFFFFFFF" HorizontalAlignment="Left" VerticalAlignment="Top" Width="318">
+            <Expander Header="生物AI-目标" Foreground="#FFFFFFFF" VerticalAlignment="Top" Margin="0,0,0,0" Background="#00FFFFFF">
                 <Grid Height="167">
                     <Label Content="生物AI选择" HorizontalAlignment="Left" Margin="-3,140,0,-88" VerticalAlignment="Top" Style="{StaticResource Label}"/>
                     <ComboBox HorizontalAlignment="Left" Margin="72,143,0,0" VerticalAlignment="Top" Style="{StaticResource ComboBoxStyle}"
@@ -171,7 +172,7 @@
                     </ListView>
                 </Grid>
             </Expander>
-            <Expander Header="生物AI-行为" Foreground="#FFFFFFFF"  HorizontalAlignment="Left" VerticalAlignment="Top" Width="318">
+            <Expander Header="生物AI-行为" Foreground="#FFFFFFFF" VerticalAlignment="Top" Margin="0,0,0,0" Background="#00FFFFFF">
                 <Grid Height="169">
                     <Label Content="生物AI选择" HorizontalAlignment="Left" Margin="0,140,0,-88" VerticalAlignment="Top" Style="{StaticResource Label}"/>
                     <ComboBox HorizontalAlignment="Left" Margin="75,142,0,0" VerticalAlignment="Top" Style="{StaticResource ComboBoxStyle}"
@@ -197,7 +198,7 @@
                 </Grid>
             </Expander>
         </StackPanel>
-        <StackPanel Margin="0,30,0,0" Grid.Column="1" HorizontalAlignment="Left" Height="717" VerticalAlignment="Top" Width="319">
+        <StackPanel Margin="0,0,0,0" Grid.Column="1">
             <Expander Header="生物掉落表" Foreground="#FFFFFFFF" HorizontalAlignment="Left" VerticalAlignment="Top" Width="319">
                 <Grid Height="168" Width="319">
                     <Label Content="掉落类型选择" HorizontalAlignment="Left" Margin="0,140,0,0" VerticalAlignment="Top" Style="{StaticResource Label}" Width="83"/>
@@ -382,8 +383,8 @@
                 </Grid>
             </Expander>
         </StackPanel>
-        <StackPanel Margin="0,30,0,0" Grid.Column="2" HorizontalAlignment="Left" Height="678" VerticalAlignment="Top" Width="318">
-            <Expander Header="技能-机制" HorizontalAlignment="Left" VerticalAlignment="Top" Width="318" Foreground="White">
+        <StackPanel Margin="0,0,0,37" Grid.Column="2">
+            <Expander Header="技能-机制" VerticalAlignment="Top" Foreground="White">
                 <Grid Height="190">
                     <ListView HorizontalAlignment="Left" Height="135" VerticalAlignment="Top" Width="313" x:Name="SkillMechanics_T"
                         Style="{StaticResource ListViewStyle1}" Margin="0,53,0,0">
@@ -409,7 +410,7 @@
 
                 </Grid>
             </Expander>
-            <Expander Header="技能-特效" HorizontalAlignment="Left" VerticalAlignment="Top" Width="318" Foreground="White">
+            <Expander Header="技能-特效" VerticalAlignment="Top" Foreground="White">
                 <Grid Height="192">
                     <Label Content="特效类型" HorizontalAlignment="Left" VerticalAlignment="Top" Style="{StaticResource Label}"/>
                     <ComboBox HorizontalAlignment="Left" Margin="63,3,0,0" VerticalAlignment="Top" Height="20" Width="178" Style="{StaticResource ComboBoxStyle}"
@@ -457,4 +458,4 @@
             </Expander>
         </StackPanel>
     </Grid>
-</Window>
+</controls:MetroWindow>
